Fixed swiper overflow bug

--- a/index.html
+++ b/index.html
@@ -1666,31 +1666,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!--Main Content Start-->
 <main class="container-fluid mx-0 pb-5 mt-2 mt-md-5">
 
@@ -2424,7 +2399,6 @@
                 <div class="col-12 col-lg-6 order-first order-lg-last pt-3">
                     <img class="img img-fluid w-85 mx-auto d-block" src="assets/img/statics/placeholder-sq.jpg"
                          data-lazy-src="assets/img/index/about/logo-content.svg" alt="banner"/>
-
                 </div>
 
             </div>
@@ -2441,7 +2415,7 @@
             </div>
             <div class="row">
                 <div class="col py-2 px-0">
-                    <div class="swiper-container toBe  swiper-products pb-3" style="position: unset!important;">
+                    <div class="swiper-container toBe  swiper-products pb-3 flowhid" style="position: unset!important;">
                         <div class="swiper-wrapper pad-verti10">
                             <!--foreach sample start-->
                             <a href class="swiper-slide h-auto swiperCenter nota trans-t-5">
